--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "h:\\Academics\\Google Machine Learning resources\\Projects(Ready)\\Salary Estimator\\FlaskAPI\\Scripts\\python.exe",
+    "python.pythonPath": "C:\\Users\\impar\\AppData\\Local\\Programs\\Python\\Python37\\python.exe",
     "git.ignoreLimitWarning": true
 }
